<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>car_lane</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="orangepi@todo.todo">orangepi</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <!-- <depend>sensor_msgs</depend>
  <depend>rclcpp</depend>
  <depend>opencv</depend>
  <depend>cv_bridge</depend> -->
  <build_depend>rclcpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>backward_ros</build_depend>
  <build_depend>compressed_image_transport</build_depend>

  <depend>fusion_interfaces</depend>

  <exec_depend>opencv</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>backward_ros</exec_depend>
  <exec_depend>compressed_image_transport</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
